<resources>

    <!-- Don't change -->
    <string name="app_name">Bunual</string>
    <string name="all_announcements">All Announcements</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="download">Downloading..</string>

    <string-array name="sort_data_texts">
        <item>At least priced</item>
        <item>Most expensive</item>
        <item>The most viewed</item>
        <item>The most liked</item>
        <item>Mix time</item>
        <item>Most old</item>
        <item>@string/last_ones</item>
    </string-array>

    <!-- Registration Fragment -->
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="enter_valid_phone_number">Please enter a valid phone number</string>
    <string name="enter_correct_confirmation_code">Please enter a correct confirmation code</string>
    <string name="enter_code">Enter the confirmation code sent to you</string>
    <string name="send_sms_code">Send SMS code</string>
    <string name="confirmation_code_will_sent_you">confirmation code will be sent to you</string>
    <string name="wait_for_sending_code">please wait while sending the code</string>
    <string name="send_code_again">send again</string>

    <!-- Home Fragment -->
    <string name="all_phone_models">All phone models</string>
    <string name="newest_first">Newest first</string>
    <string name="filter">Filter</string>
    <string name="most_viewed">The most viewed</string>
    <string name="last_ones">The last ones</string>
    <string name="more">More</string>

    <!-- ShowDetails Fragment -->
    <string name="add_to_favourites">Add to favourites</string>
    <string name="delete_from_favourites">Delete from favourites</string>
    <string name="call">Call</string>
    <string name="storage">Storage</string>
    <string name="ram">Ram</string>
    <string name="color">Color</string>
    <string name="status">Status</string>
    <string name="delivery">Delivery</string>
    <string name="user_place">User place</string>
    <string name="user_name">User name</string>
    <string name="user_phone_number">Phone number</string>
    <string name="date">Date</string>

    <!-- Search Fragment -->
    <string name="search">Search</string>
    <string name="all_ads">All Announcements</string>

    <!-- NewAnnouncement Fragment -->
    <string name="you_must_login">You must create an account or log in for share announcement</string>
    <string name="start">Start</string>

    <!-- Favorites Fragment -->
    <string name="favourites">Favourites</string>
    <string name="no_data">No any data</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- Profile Fragment -->
    <string name="log_out">Log out</string>

    <!-- Brands Fragment -->
    <string name="select_phone_brand">Select Brand</string>

    <!-- Models Fragment -->
    <string name="select_phone_model">Select Model</string>
    <string name="select_phone_image">Select Image(s)</string>\

    <!-- Description Fragment -->
    <string name="enter_phone_description">Enter description</string>

    <!-- Features Fragment -->
    <string name="fill_phone_features">Fill features</string>
    <string name="choose_phone_storage">Choose Storage</string>
    <string name="choose_phone_ram">Choose Ram</string>
    <string name="choose_phone_color">Choose Color</string>
    <string name="new_">New</string>
    <string name="used">Used</string>
    <string name="as_spare_part">As a spare part</string>
    <string-array name="storageCapacities">
        <item>@string/other</item>
        <item>4 GB</item>
        <item>8 GB</item>
        <item>16 GB</item>
        <item>32 GB</item>
        <item>64 GB</item>
        <item>128 GB</item>
        <item>256 GB</item>
        <item>512 GB</item>
        <item>512 GB+</item>
        <item>1 TB (1000 GB)</item>
        <item>1 TB (1000 GB)+</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="ramCapacities">
        <item>@string/other</item>
        <item>1 GB</item>
        <item>2 GB</item>
        <item>3 GB</item>
        <item>4 GB</item>
        <item>5 GB</item>
        <item>6 GB</item>
        <item>7 GB</item>
        <item>8 GB</item>
        <item>16 GB</item>
        <item>32 GB</item>
        <item>64 GB</item>
        <item>128 GB</item>
        <item>256 GB</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="colorNames">
        <item>@string/other</item>
        <item>silver</item>
        <item>gray</item>
        <item>maroon</item>
        <item>red</item>
        <item>purple</item>
        <item>fuchsia</item>
        <item>green</item>
        <item>lime</item>
        <item>olive</item>
        <item>yellow</item>
        <item>navy</item>
        <item>blue</item>
        <item>teal</item>
        <item>aqua</item>
        <item>@string/other</item>
    </string-array>


    <!-- Price Fragment -->
    <string name="enter_phone_price">Enter price</string>
    <string name="price">Price</string>
    <string name="by_agreement">By agreement</string>

    <!-- User Fragment -->
    <string name="fill_user_information">Fill user information</string>
    <string name="choose_place">Choose your place</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="no_delivery">No delivery</string>
    <string name="delivery_to_place">Delivery to place</string>
    <string name="subway_delivery">Subway delivery</string>
    <string name="share_ads">Select Images and Share Announcement</string>
    <string name="places_name_downloading">Place names are downloading..</string>


    <string name="wait">Please wait</string>
    <string name="downloading_data">Downloading data</string>
    <string name="next">Next</string>
    <string name="search_with_points">Search..</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dismiss">Dismiss</string>
    <string name="check">Check</string>
    <string name="other">Other</string>
    <string name="confirmation">Confirmation</string>
    <string name="fail">Fail. Please try again.</string>
    <string name="main">Main</string>
    <string name="cabinet">Cabinet</string>
    <string name="similar_announcements">Similar announcements</string>
    <string name="more_reviews">More reviews</string>
    <string name="is_executed">Is executed..</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="changes_will_canceled">If you press YES changes will be canceled!</string>
    <string name="do_not_want_continue">Yes,I do not want continue</string>
    <string name="favourites_announcement_limit">Favourites announcement limit is 10</string>
    <string name="filter_announcements">Filter Announcements</string>
    <string name="retrofit_exception">There was a problem loading data</string>

    <string name="account_opened_successfully">Account opened successfully</string>
    <string name="favourite_announcements_limit">Favourite announcements limit is 10</string>
    <string name="select_images_text">On the screen that opens, select all the photos you want to share and click choose</string>
    <string name="fill_in_all">Please fill in all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>