<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_add_announcement_activity"
    app:startDestination="@id/brandsFragment">

    <fragment
        android:id="@+id/brandsFragment"
        android:name="com.nomanim.bax.ui.fragments.newAnnouncementActivity.BrandsFragment"
        android:label="@string/select_phone_brand"
        tools:layout="@layout/fragment_brands" >
        <action
            android:id="@+id/action_brandsFragment_to_modelsFragment"
            app:destination="@id/modelsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/modelsFragment"
        android:name="com.nomanim.bax.ui.fragments.newAnnouncementActivity.ModelsFragment"
        android:label="@string/select_phone_model"
        tools:layout="@layout/fragment_models" >
        <argument
            android:name="brandId"
            app:argType="string" />
        <argument
            android:name="brandName"
            app:argType="string" />
        <action
            android:id="@+id/action_modelsFragment_to_imagesFragment"
            app:destination="@id/imagesFragment" />
    </fragment>
    <fragment
        android:id="@+id/imagesFragment"
        android:name="com.nomanim.bax.ui.fragments.newAnnouncementActivity.ImagesFragment"
        android:label="@string/select_phone_image"
        tools:layout="@layout/fragment_images" >
        <action
            android:id="@+id/action_imagesFragment_to_descriptionFragment"
            app:destination="@id/descriptionFragment" />
        <argument
            android:name="brandName"
            app:argType="string" />
        <argument
            android:name="modelName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/descriptionFragment"
        android:name="com.nomanim.bax.ui.fragments.newAnnouncementActivity.DescriptionFragment"
        android:label="fragment_description"
        tools:layout="@layout/fragment_description" >
        <action
            android:id="@+id/action_descriptionFragment_to_featuresFragment"
            app:destination="@id/featuresFragment" />
        <argument
            android:name="imageUri"
            app:argType="string" />
        <argument
            android:name="imagesUri"
            app:argType="string[]" />
        <argument android:name="brandName"
            app:argType="string" />
        <argument
            android:name="modelName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/featuresFragment"
        android:name="com.nomanim.bax.ui.fragments.newAnnouncementActivity.FeaturesFragment"
        android:label="fragment_features"
        tools:layout="@layout/fragment_features" >
        <argument android:name="brandName"
            app:argType="string" />
        <argument android:name="modelName" />
        <argument
            android:name="imageUri"
            app:argType="string" />
        <argument
            android:name="imagesUri"
            app:argType="string[]" />
        <argument
            android:name="desctiptionText"
            app:argType="string" />
        <action
            android:id="@+id/action_featuresFragment_to_priceFragment"
            app:destination="@id/priceFragment" />
    </fragment>
    <fragment
        android:id="@+id/priceFragment"
        android:name="com.nomanim.bax.ui.fragments.newAnnouncementActivity.PriceFragment"
        android:label="fragment_price"
        tools:layout="@layout/fragment_price" />
</navigation>